-fixed footer on mobile

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -17,7 +17,13 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      /* margin-left: 20px; */
+    }
+  }
+
+  @media (prefers-color-scheme: light) {
+    .footer {
+      color: #25262a;
+      background-color: rgb(222, 220, 216);
     }
   }
   
