--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -27,11 +27,13 @@
     text-decoration: underline;
   }
 
-  @media (max-width: 600px) {
+  @media (prefers-color-scheme: light) {
     .navbar {
-
+      background-color: rgb(222, 220, 216);
+      filter: opacity(0.9);
+      backdrop-filter: blur(10px);
     }
     .navbar li {
-      
+      color: #25262a;
     }
   }
