--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -1,12 +1,15 @@
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+.container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .title {
@@ -26,67 +29,77 @@
   width: fit-content;
 }
 
+.text {
+  color: white;
+  font-family: monospace;
+  font-weight: lighter;
+  font-size: large;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 900px;
+  height: 510px;
+  margin: 25px 15px;
+  padding: 15px;
 
+  background-color: #0ae6b7;
+  color:rgb(18, 18, 17);
+  border-radius: 40px;
+  font-size: x-large;
+}
+.text h1 {
+  /* margin: 50px; */
+  font-family: 'Courier New', Courier, monospace;
+}
+.text p {
+  width: 400px;
+  /* margin: 20px; */
+  padding: 10px;
+}
+.display {
+  display: flex;
+  flex-direction: row;
 
-  .text h3 {
-    text-align: center;
-    color: #f0f3bd;
-    font-family: 'Courier New', Courier, monospace;
-    font-family: monospace;
-    font-weight: lighter;
-    font-size: large;
-    padding: 10px;
-    line-height: 1.5;
-    border-radius: 15px;
-    width: fit-content;
-  }
-  .text h3:hover {
-    transition: 0.3s;
-    background-color: #0ab48f;
-    border-radius: 15px;
-  }
+  justify-content: center;
+  align-items: center;
+  margin: 50px;
+}
+
+.text h2 {
+  color: #f0f3bd;
+  font-family: 'Courier New', Courier, monospace;
+  font-family: monospace;
+  font-weight: lighter;
+  border-radius: 17px;
+  padding: 10px;
+  color: #248a74;
+}
+.text h2:hover {
+  transition: 0.3s;
+  background-color: #0ab48f;
+  border-radius: 17px;
+  width: fit-content;
+  padding: 10px;
+  background-color: #0ab48f;
+}
 
 
 
   /* Mobile Device Styling */
 @media (max-width: 600px) {
-  .container {
+  
+  .display {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
   }
-  .main {
-    min-height: 100vh;
-    padding: 4rem 0;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .title {
-    font-size: 2rem;
-    margin-right: 0px;
-    margin-left: 50px;
-  }
-
-
   .text {
     width: 100%;
-    font-size: 1rem;
-    margin-left: 50px;
   }
-  .text p {
-    margin: 10px 0px 10px 40px;
-    padding: 10px 20px 10px 20px;
-  }
-  .text h1 {
-    margin-left: 35px;
-  }
-  .text h3 {
-    margin-left: 35px;
-  }
+ 
 }
 
 /* Light theme Styling */
